[tool.poetry]
name = "krasnodar"
version = "0.5.0"
description = "Russian cities names, population and coordinates"
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
packages = [
    { include = "krasnodar" },
    { include = "krasnodar/*.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
requests = "^2.26.0"
docx2txt = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests-cache = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
